--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "botkit": "^0.1.1",
-    "moment": "^2.13.0"
+    "botkit": "0.1.1",
+    "moment": "2.13.0"
   }
 }
