--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botkit": "0.1.1",
-    "lodash": "^4.12.0",
+    "lodash": "4.12.0",
     "moment": "2.13.0"
   }
 }
