fix diff numbering

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "botkit": "0.1.1",
     "lodash": "4.12.0",
     "moment": "2.13.0",
-    "moment-weekday-calc": "^1.1.0"
+    "moment-weekday-calc": "1.1.0"
   }
 }
