--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "lodash": "4.12.0",
     "moment": "2.13.0",
     "moment-weekday-calc": "1.1.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.0.7"
   }
 }
