--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "gulp": "3.9.1",
-    "gulp-nodemon": "2.0.7"
+    "gulp-jshint": "^2.0.1",
+    "gulp-nodemon": "2.0.7",
+    "jshint": "^2.9.2"
   }
 }
