--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 dependencies:
   override:
     - npm install -g gulp-cli
-    - npm install
+    - npm install --dev
 
 test:
   override:
