--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.3.5",
     "botkit": "0.1.1",
     "lodash": "4.12.0",
     "moment": "2.13.0",
